<?xml version="1.0"?>
<package>
  <name>orb_slam2</name>
  <version>2.0.0</version>
  <description>ORB_SLAM2</description>

  <maintainer email="liming@rokid.com">liming</maintainer>

  <license>GPLv3</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
